<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.mosip.kernel</groupId>
	<artifactId>kernel-ref-parent</artifactId>
	<version>1.3.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>kernel</name>
	<description>Parent project of MOSIP Kernel  Referernce Implementation components</description>
	<url>https://github.com/mosip/mosip-ref-impl</url>
	
	<licenses>
          <license>
                <name>MPL 2.0</name>
                <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
          </license>
        </licenses>
	
	<scm>
                <connection>scm:git:git://github.com/mosip/mosip-ref-impl.git</connection>
                <developerConnection>scm:git:ssh://github.com:mosip/mosip-ref-impl.git</developerConnection>
                <url>https://github.com/mosip/mosip-ref-impl</url>
                <tag>HEAD</tag>
        </scm>
        <developers>
                <developer>
                  <name>Mosip</name>
                  <email>mosip.emailnotifier@gmail.com</email>
                  <organization>io.mosip</organization>
                  <organizationUrl>https://github.com/mosip/mosip-ref-impl</organizationUrl>
                </developer>
        </developers>
	
         <repositories>
          <repository>
            <id>ossrh</id>
            <name>Central Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <layout>default</layout>
            <snapshots>
                  <enabled>true</enabled>
            </snapshots>
          </repository>
        </repositories>
        <distributionManagement>
                <snapshotRepository>
                        <id>ossrh</id>
                        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
                 <repository>
                        <id>ossrh</id>
                        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
        </distributionManagement>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- maven -->
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.compiler.version>3.8.0</maven.compiler.version>
		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
		<maven.jacoco.plugin.version>0.8.11</maven.jacoco.plugin.version>
		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
		<maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
		<maven.deploy.plugin.version>2.8.1</maven.deploy.plugin.version>
		<maven.source.plugin.version>2.2.1</maven.source.plugin.version>
		<maven.gpg.plugin.version>1.5</maven.gpg.plugin.version>
		<nexus.staging.plugin.version>1.6.7</nexus.staging.plugin.version>
		<git.commit.plugin.version>3.0.1</git.commit.plugin.version>

		<!-- logger -->
		<jcl.to.slf4j.version>1.7.25</jcl.to.slf4j.version>
		<!-- kernel -->
		<kernel-core.version>1.3.0-SNAPSHOT</kernel-core.version>
		
		<junit.vintage.version>5.10.2</junit.vintage.version>
		
		<sonar.coverage.exclusions>**/constant/**,**/config/**,**/httpfilter/**,**/cache/**,**/dto/**,**/entity/**,**/model/**,**/exception/**,**/repository/**,**/security/**,**/*Config.java,**/*BootApplication.java,**/*VertxApplication.java,**/cbeffutil/**</sonar.coverage.exclusions>
		<sonar.cpd.exclusions>**/dto/**,**/entity/**,**/config/**</sonar.cpd.exclusions>
	</properties>

	<modules>
		<module>kernel-ref-idobjectvalidator</module>
		<module>kernel-virusscanner-clamav</module>
		<module>kernel-smsserviceprovider-msg91</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jul-to-slf4j</artifactId>
			<version>${jcl.to.slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${jcl.to.slf4j.version}</version>
		</dependency>
	</dependencies>

	<build>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven.surefire.plugin.version}</version>
					<configuration>
						<skipTests>${skipTests}</skipTests>
						<skip>false</skip>
						<argLine>
							${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
						</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${maven.jacoco.plugin.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>report</id>
							<phase>prepare-package</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.version}</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>
			<plugin>
                          	<groupId>org.sonatype.plugins</groupId>
                          	<artifactId>nexus-staging-maven-plugin</artifactId>
                          	<version>${nexus.staging.plugin.version}</version>
                          	<extensions>true</extensions>
                          	<executions>
                   			 <execution>
                      				<id>default-deploy</id>
                      				<phase>deploy</phase>
                      				<goals>
                        				<goal>deploy</goal>
                      				</goals>
                    			</execution>
                          	</executions>
                  	  	<configuration>
                        		<serverId>ossrh</serverId>
                        		<nexusUrl>https://oss.sonatype.org/</nexusUrl>
                        		<autoReleaseAfterClose>false</autoReleaseAfterClose>
                  		</configuration>
                	</plugin> 

               <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-source-plugin</artifactId>
                  <version>${maven.source.plugin.version}</version>
                  <executions>
                        <execution>
                          <id>attach-sources</id>
                          <goals>
                                <goal>jar-no-fork</goal>
                          </goals>
                        </execution>
                  </executions>
                </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven.javadoc.plugin.version}</version>
				<executions>
                        <execution>
                          <id>attach-javadocs</id>
                          <goals>
                                <goal>jar</goal>
                          </goals>
                        </execution>
                  </executions>
				<configuration>
					<aggregate>true</aggregate>
					<doclint>none</doclint>
				</configuration>
			</plugin>

                <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-gpg-plugin</artifactId>
                  <version>${maven.gpg.plugin.version}</version>
                  <executions>
                        <execution>
                          <id>sign-artifacts</id>
                          <phase>verify</phase>
                          <goals>
                                <goal>sign</goal>
                          </goals>
		          <configuration>
                		<gpgArguments>
                    			<arg>--pinentry-mode</arg>
                    			<arg>loopback</arg>
                		</gpgArguments>
            		 </configuration>
                        </execution>
                  </executions>
                </plugin>
				<plugin>
					<groupId>pl.project13.maven</groupId>
					<artifactId>git-commit-id-plugin</artifactId>
					<version>${git.commit.plugin.version}</version>
					<executions>
						<execution>
							<id>get-the-git-infos</id>
							<goals>
								<goal>revision</goal>
							</goals>
							<phase>validate</phase>
						</execution>
					</executions>
					<configuration>
						<generateGitPropertiesFile>true</generateGitPropertiesFile>
						<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
						<includeOnlyProperties>
							<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
							<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
						</includeOnlyProperties>
						<commitIdGenerationMode>full</commitIdGenerationMode>
						<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
						<!-- <format>json</format> -->
					</configuration>
				</plugin>
<!--			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
-->		</plugins>
	</build>
	<profiles>
		<profile>
			<id>sonar</id>
			<properties>
				<sonar.sources>.</sonar.sources>
				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
				<sonar.exclusions>${sonar.coverage.exclusions}</sonar.exclusions>
				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
			</properties>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonarsource.scanner.maven</groupId>
						<artifactId>sonar-maven-plugin</artifactId>
						<version>${maven.sonar.plugin.version}</version>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>sonar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
